Organized the routes, generated the data models with Sequelize-auto, implemented Singleton for Sequelize connection handler, implemented test route + almost implemented /auth/signup (TODO: Email with verification token)
