# api/index.js
@@ -1,4 +1,3 @@
-const config = require('./libraries/config');
 const express = require("express");
 const router = express.Router();
 const morgan = require("morgan");
@@ -7,17 +6,16 @@ const swaggerDocument = require("./swagger.json");
 const cors = require("cors");
 
 const authRoute = require("./routes/auth");
+const testRoute = require("./routes/test");
 
 const app = express();
 app.use(morgan("combined"));
 app.use(express.json());
 app.use(cors());
 
-router.get("/test", (req, res) => {
-  res.status(200).json({ status: 200 }).end();
-});
-router.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 router.use("/auth", authRoute);
+router.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+router.use("/test", testRoute);
 
 app.use("/api/v1", router);
 
